2013-06-07  Yao Qi  <yao@codesourcery.com>

	* gdb.trace/mi-trace-unavailable.exp: New.
	* gdb.trace/trace-unavailable.c: New.

2013-06-06  Doug Evans  <dje@google.com>

	* gdb.cp/derivation.exp: Make tests have unique names.

2013-06-06  Tom Tromey  <tromey@redhat.com>

	* gdb.base/dump.exp (capture_value): Don't put expression into
	test name if arguments passed in.
	Rename a couple more tests to make them unique.

2013-06-06  Tom Tromey  <tromey@redhat.com>

	* gdb.base/break-always.exp: Explicitly specify test name.

2013-06-05  Doug Evans  <dje@google.com>
	    Keith Seitz  <keiths@redhat.com>

	* gdb.cp/derivation2.cc: New file.
	* gdb.cp/derivation.cc (main): Call foo2.
	* gdb.cp/derivation.exp: Add tests for typedefs in another
	file, and when there's an active block.

2013-06-05  Luis Machado  <lgustavo@codesourcery.com>

	* gdb.cp/virtfunc.exp (make_one_vtable_result): Handle extra output
	from targets that use function descriptors in the virtual tables.
	Handle presence of dot symbols.

2013-06-04  Gary Benson  <gbenson@redhat.com>

	* gdb.base/break-probes.exp: New file.
	* gdb.base/break-probes.c: Likewise.
	* gdb.base/break-probes-solib.c: Likewise.
	* gdb.base/info-shared.exp: New file.
	* gdb.base/info-shared.c: Likewise.
	* gdb.base/info-shared-solib1.c: Likewise.
	* gdb.base/info-shared-solib2.c: Likewise.

2013-06-04  Jan Kratochvil  <jan.kratochvil@redhat.com>
	    Gary Benson  <gbenson@redhat.com>

	* lib/gdb.exp (build_executable_from_specs): Use gdb_compile_pthread,
	gdb_compile_shlib or gdb_compile_shlib_pthreads where appropriate.
	* lib/prelink-support.exp (build_executable_own_libs): Allow INTERP
	to be set to "no" to indicate that no ld.so copy should be made.
	* gdb.base/break-interp.exp (solib_bp): New constant.
	(reach_1): Use the above instead of "_dl_debug_state".
	(test_attach): Likewise.
	(test_ld): Likewise.
	* gdb.threads/dlopen-libpthread.exp: New file.
	* gdb.threads/dlopen-libpthread.c: Likewise.