@@ -20,14 +20,25 @@ if { [prepare_for_testing ${testfile}.exp ${testfile} ${srcfile} {debug c++}] } 
      return -1
 }
 
-gdb_test "ptype t::t" "type = void \\(t \\* const\\)" \
-    "print type of t::t"
+if { [istarget arm*-*-*] } {
+    gdb_test "ptype t::t" "type = struct t {\r\n    C m;\r\n} \\*\\(t \\* const\\)" \
+	"print type of t::t"
+} else {
+    gdb_test "ptype t::t" "type = void \\(t \\* const\\)" \
+	"print type of t::t"
+}
 
 gdb_test "ptype X::t2" "type = struct X::t2 {\[\r\n \]*X::C2 m;\[\r\n \]*}" \
     "print type of X::t2"
 
-gdb_test "ptype X::t2::t2" "type = void \\(X::t2 \\* const\\)" \
-    "print type of X::t2::t2"
-
-gdb_test "ptype t3::~t3" "type = void \\(t3 \\* const\\)" \
-    "print type of t3::~t3"
+if { [istarget arm*-*-*] } {
+    gdb_test "ptype X::t2::t2" "type = struct X::t2 {\r\n    X::C2 m;\r\n} \\*\\(X::t2 \\* const\\)" \
+	"print type of X::t2::t2"
+    gdb_test "ptype t3::~t3" "type = void \\*\\(t3 \\* const\\)" \
+	"print type of t3::~t3"
+} else {
+    gdb_test "ptype X::t2::t2" "type = void \\(X::t2 \\* const\\)" \
+	"print type of X::t2::t2"
+    gdb_test "ptype t3::~t3" "type = void \\(t3 \\* const\\)" \
+	"print type of t3::~t3"
+}
