@@ -69,30 +69,57 @@ gdb_test "print test1.key2" "\\$\[0-9\]* = 77" "simple object, static long"
 # simple object, static enum
 gdb_test "print test1.value" "\\$\[0-9\]* = oriental" "simple object, static enum"
 
-gdb_test "print test5.single_constructor" \
-    { = {void \(single_constructor \* const\)} 0x[0-9a-f]+ <single_constructor::single_constructor\(\)>} \
-    "simple object instance, print constructor"
-gdb_test "ptype test5.single_constructor" \
-    {type = void \(single_constructor \* const\)} \
-    "simple object instance, ptype constructor"
-gdb_test "ptype single_constructor::single_constructor" \
-    {type = void \(single_constructor \* const\)} \
-    "simple object class, ptype constructor"
+if { [istarget arm*-*-*] } {
+    gdb_test "print test5.single_constructor" \
+	{ = {single_constructor \*\(single_constructor \* const\)} 0x[0-9a-f]+ <single_constructor::single_constructor\(\)>} \
+	"simple object instance, print constructor"
+    gdb_test "ptype test5.single_constructor" \
+	{type = class single_constructor {\r\n  public:\r\n    single_constructor\(void\);\r\n    ~single_constructor\(int\);\r\n} \*\(single_constructor \* const\)} \
+	"simple object instance, ptype constructor"
+    gdb_test "ptype single_constructor::single_constructor" \
+	{type = class single_constructor {\r\n  public:\r\n    single_constructor\(void\);\r\n    ~single_constructor\(int\);\r\n} \*\(single_constructor \* const\)} \
+	"simple object class, ptype constructor"
 
-gdb_test "print test1.~gnu_obj_1" \
-    { = {void \(gnu_obj_1 \* const, int\)} 0x[0-9a-f]+ <gnu_obj_1::~gnu_obj_1\(\)>} \
-    "simple object instance, print destructor"
-gdb_test "ptype test1.~gnu_obj_1" \
-    {type = void \(gnu_obj_1 \* const, int\)} \
-    "simple object instance, ptype destructor"
+    gdb_test "print test1.~gnu_obj_1" \
+	{ = {void \*\(gnu_obj_1 \* const, int\)} 0x[0-9a-f]+ <gnu_obj_1::~gnu_obj_1\(\)>} \
+	"simple object instance, print destructor"
+    gdb_test "ptype test1.~gnu_obj_1" \
+	{type = void \*\(gnu_obj_1 \* const, int\)} \
+	"simple object instance, ptype destructor"
 
-gdb_test "print test1.'~gnu_obj_1'" \
-    { = {void \(gnu_obj_1 \*( const)?, int\)} 0x[0-9a-f]+ <gnu_obj_1::~gnu_obj_1\(\)>} \
-    "simple object instance, print quoted destructor"
+    gdb_test "print test1.'~gnu_obj_1'" \
+	{ = {void \*\(gnu_obj_1 \*( const)?, int\)} 0x[0-9a-f]+ <gnu_obj_1::~gnu_obj_1\(\)>} \
+	"simple object instance, print quoted destructor"
 
-gdb_test "ptype gnu_obj_1::'~gnu_obj_1'" \
-    {type = void \(gnu_obj_1 \* const\)} \
-    "simple object class, ptype quoted destructor"
+    gdb_test "ptype gnu_obj_1::'~gnu_obj_1'" \
+	{type = void \*\(gnu_obj_1 \* const\)} \
+	"simple object class, ptype quoted destructor"
+} else {
+    gdb_test "print test5.single_constructor" \
+	{ = {void \(single_constructor \* const\)} 0x[0-9a-f]+ <single_constructor::single_constructor\(\)>} \
+	"simple object instance, print constructor"
+    gdb_test "ptype test5.single_constructor" \
+	{type = void \(single_constructor \* const\)} \
+	"simple object instance, ptype constructor"
+    gdb_test "ptype single_constructor::single_constructor" \
+	{type = void \(single_constructor \* const\)} \
+	"simple object class, ptype constructor"
+
+    gdb_test "print test1.~gnu_obj_1" \
+	{ = {void \(gnu_obj_1 \* const, int\)} 0x[0-9a-f]+ <gnu_obj_1::~gnu_obj_1\(\)>} \
+	"simple object instance, print destructor"
+    gdb_test "ptype test1.~gnu_obj_1" \
+	{type = void \(gnu_obj_1 \* const, int\)} \
+	"simple object instance, ptype destructor"
+
+    gdb_test "print test1.'~gnu_obj_1'" \
+	{ = {void \(gnu_obj_1 \*( const)?, int\)} 0x[0-9a-f]+ <gnu_obj_1::~gnu_obj_1\(\)>} \
+	"simple object instance, print quoted destructor"
+
+    gdb_test "ptype gnu_obj_1::'~gnu_obj_1'" \
+	{type = void \(gnu_obj_1 \* const\)} \
+	"simple object class, ptype quoted destructor"
+}
 
 # Two.
 
