@@ -1,3 +1,9 @@
+2013-06-07  Will Newton  <will.newton@linaro.org>
+
+	* gdb.cp/anon-struct.exp: Conditionalize constructor and
+	destructor prototypes for ARM ABI.
+	* gdb.cp/m-static.exp: Likewise.
+
 2013-06-07  Yao Qi  <yao@codesourcery.com>
 
 	* gdb.trace/mi-trace-unavailable.exp: New.
